components/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: rollerservices
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "streamroller.phillmorton.co.uk"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: steamroller-api
            port:
              number: 18789
